--- a/content/publication/nevergrad/cite.bib
+++ b/content/publication/nevergrad/cite.bib
@@ -1,6 +1,32 @@
-@inproceedings{doumanoglou2021zeroth,
-  title={Zeroth-Order Optimizer Benchmarking for 3D PerformanceCapture},
-  author={Doumanoglou, Alexandros and Drakoulis, Petros and Christaki, Kyriaki and Zioulis, Nikolaos and Vladimiros, Sterzentsenko and Karakottas, Antonis and Zarpalas, Dimitrios and Daras, Petros},
-  booktitle={Proceedings of the 2021 genetic and evolutionary computation conference companion},  
-  year={2021}
+@inproceedings{10.1145/3449639.3459354,
+author = {Doumanoglou, Alexandros and Drakoulis, Petros and Christaki, Kyriaki and Zioulis, Nikolaos and Sterzentsenko, Vladimiros and Karakottas, Antonis and Zarpalas, Dimitrios and Daras, Petros},
+title = {Zeroth-Order Optimizer Benchmarking for 3D Performance Capture: A Real-World Use Case Analysis},
+year = {2021},
+isbn = {9781450383509},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3449639.3459354},
+doi = {10.1145/3449639.3459354},
+abstract = {In the field of 3D Human Performance Capture, a high-quality 3D scan of the performer
+is rigged and skinned to an animatable 3D template mesh that is subsequently fitted
+to the captured performance's RGB-D data. Template fitting is accomplished via solving
+for the template's pose parameters that better explain the performance data at each
+recorded frame. In this paper, we challenge open implementations of zeroth-order optimizers
+to solve the template fitting problem in a human performance capture dataset. The
+objective function that we employ approximates, the otherwise costly to evaluate,
+3D RMS hausdorff distance between the animated template and the 3D mesh reconstructed
+from the depth data (target mesh) at an individual recorded frame. We distinguish
+and benchmark the optimizers, in three different real-world scenarios, two of which
+are based on the geometric proximity of the template to the target in individual frames,
+while in the third one we fit the template sequentially to all target frames of the
+recorded sequence. Conclusions of this work can serve as a reference for future optimizer
+implementations and our findings can server as a baseline for future multi-objective
+optimization approaches. We make part of our benchmark and experiment setup publicly
+available (https://github.com/VCL3D/nevergrad, https://github.com/VCL3D/PerformanceCapture/releases/).},
+booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference},
+pages = {955–963},
+numpages = {9},
+keywords = {optimization, benchmarking, performance capture, open source},
+location = {Lille, France},
+series = {GECCO '21}
 }
